--- a/react-app-api/.env
+++ b/react-app-api/.env
@@ -1,2 +1,7 @@
-MONGODB_URL = mongodb://localhost/bookworm
-JWT_SECRET = secretkey
+MONGODB_URL=mongodb://localhost/bookworm
+JWT_SECRET=secretkey
+HOST=http://localhost:3000
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=30f7abdd7e58eb
+EMAIL_PASS=612e9654af4e42
